# Social-Media-Trending-Post-Predictor

./: .gitignore  README.md  README.zh-TW.md  adaptive_system.py  dashboard.py  db_manager.py  feature_engineering.py  feature_utils.py  long_term_eval.py  pred.csv  ptt_lifecycle_model.txt  ptt_moniter.py  ptt_popularity_ranker.txt  ptt_post_time_analysis.py  pyproject.toml  train_model_lifecycle.py
src/: main.py
src/analysis/: feature_engineering.py
src/dashboard/: dashboard.py
src/data/: db_manager.py  ptt_monitor.py
src/features/: feature_utils.py
src/model/: train_model_lifecycle.py
